# chimer

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/chimer/: __init__.py  app.py  magnitude_store.py  utils.py
test/: test_magnitude_store.py
